--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,26 +1,26 @@
 /* aside */
 
-/* Logo Wii-Design.com Start */
-/* 
-.aside .logo {
-    position: absolute;
-    top: 50px;
-    min-width: 210px;
-    padding: 10px;
-    border-radius: 15px;
-}
-.aside .logo img {
-    max-width: 200px;
-    display: block;
-    -webkit-filter: drop-shadow(3px 3px 1.5px rgba(0,0,0,0.45));
-    filter: drop-shadow(3px 3px 1.5px rgba(0,0,0,0.45));
-} 
-*/
+// .aside {
+//     position: absolute;
+//     top: 50px;
+//     min-width: 210px;
+//     padding: 10px;
+//     border-radius: 15px;
+
+//     img {
+//         max-width: 200px;
+//         display: block;
+//         -webkit-filter: drop-shadow(3px 3px 1.5px rgba(0, 0, 0, 0.45));
+//         filter: drop-shadow(3px 3px 1.5px rgba(0, 0, 0, 0.45));
+//     }
+// }
 /* Logo Wii-Design.com End */
 
 .aside {
     width: 270px;
     height: 100%;
+    padding: 30px;
+    border-right: 1px solid var(--bg-black-50);
     background: var(--bg-black-100);
 
     position: fixed;
@@ -32,130 +32,141 @@
     align-items: center;
     justify-content: center;
 
-    padding: 30px;
+    .logo {
+        position: absolute;
+        top: 50px;
+        text-align: center;
+        text-transform: capitalize;
 
-    border-right: 1px solid var(--bg-black-50);
-}
-.aside .logo {
-    position: absolute;
-    top: 50px;
-    text-align: center;
-    text-transform: capitalize;
-}
-.aside .logo a {
-    color: var(--text-black-900);
-    /* color: red; */
-    font-weight: 700;
-    /* background: red; */
-    padding: 15px 20px;
-    font-size: 30px;
-    letter-spacing: 5px;
-}
-.aside .logo a span {
-    font-family: "Clicker Script", cursive;
-    font-size: 40px;
-}
-.aside .logo a::before {
-    content: "";
+        a {
+            color: var(--text-black-900);
+            font-weight: 700;
+            padding: 15px 20px;
+            font-size: 30px;
+            letter-spacing: 5px;
 
-    width: 20px;
-    height: 20px;
-    border-bottom: 5px solid var(--skin-color);
-    border-left: 5px solid var(--skin-color);
+            span {
+                font-family: "Clicker Script", cursive;
+                font-size: 40px;
+            }
 
-    position: absolute;
-    bottom: 0;
-    left: 0;
-}
-.aside .logo a::after {
-    content: "";
+            &::before {
+                content: "";
+                width: 20px;
+                height: 20px;
+                border-bottom: 5px solid var(--skin-color);
+                border-left: 5px solid var(--skin-color);
+                position: absolute;
+                bottom: 0;
+                left: 0;
+            }
 
-    width: 20px;
-    height: 20px;
+            &::after {
+                content: "";
+                width: 20px;
+                height: 20px;
+                border-top: 5px solid var(--skin-color);
+                border-right: 5px solid var(--skin-color);
+                position: absolute;
+                top: 0;
+                right: 0;
+            }
+        }
+    }
 
-    border-top: 5px solid var(--skin-color);
-    border-right: 5px solid var(--skin-color);
+    .nav-toggler {
+        position: fixed;
+        top: 20px;
+        left: 300px;
+        cursor: pointer;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        width: 45px;
+        height: 40px;
+        border: 1px solid var(--bg-black-50);
+        border-radius: 5px;
+        background: var(--bg-black-100);
 
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-.aside .nav-toggler {
-    position: fixed;
-    top: 20px;
-    left: 300px;
+        span {
+            position: relative;
+            display: inline-block;
+            width: 18px;
+            height: 2px;
+            background: var(--skin-color);
 
-    cursor: pointer;
+            &::before {
+                position: absolute;
+                top: -6px;
+                left: 0;
+                content: "";
+                width: 18px;
+                height: 2px;
+                background: var(--skin-color);
+            }
 
-    /* display: flex; */
-    display: none;
-    align-items: center;
-    justify-content: center;
+            &::after {
+                position: absolute;
+                top: 6px;
+                left: 0;
+                content: "";
+                width: 18px;
+                height: 2px;
+                background: var(--skin-color);
+            }
+        }
+    }
+    .flag {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        position: absolute;
+        // left: 0px;
+        top: -35px;
+        // border: 1px solid #000;
 
-    width: 45px;
-    height: 40px;
+        .flagLogo {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 30px;
+            height: 30px;
+            padding: 5px ;
+            // margin: 0 10px;
+            // border-radius: 50%;
+            // border: 1px solid var(--bg-black-50);
+            // font-size: 1em;
+            // line-height: 20px;
+            // font-weight: 600;
+            // // text-align: center;
+            // color: var(--text-black-700);
+            // padding: 5px 15px;
+            // // border-bottom: ;
+        }
+    }
+    .nav {
+        margin-top: 50px;
 
-    border: 1px solid var(--bg-black-50);
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    border-radius: 5px;
-    background: var(--bg-black-100);
-}
-.aside .nav-toggler span {
-    position: relative;
+        li {
+            margin-bottom: 20px;
+            display: block;
 
-    display: inline-block;
-    width: 18px;
-    height: 2px;
+            a {
+                display: block;
+                font-size: 1em;
+                font-weight: 600;
+                color: var(--text-black-900);
+                padding: 5px 15px;
+                border-bottom: 1px solid var(--bg-black-50);
 
-    background: var(--skin-color);
-}
-.aside .nav-toggler span::before {
-    position: absolute;
-    top: -6px;
-    left: 0;
+                &.active-link {
+                    color: var(--skin-color);
+                }
 
-    content: "";
-
-    width: 18px;
-    height: 2px;
-
-    background: var(--skin-color);
-}
-.aside .nav-toggler span::after {
-    position: absolute;
-    top: 6px;
-    left: 0;
-
-    content: "";
-
-    width: 18px;
-    height: 2px;
-
-    background: var(--skin-color);
-}
-.aside .nav {
-    margin-top: 50px;
-}
-.aside .nav li {
-    margin-bottom: 20px;
-    display: block;
-}
-.aside .nav li a {
-    display: block;
-
-    font-size: 1em;
-    font-weight: 600;
-    color: var(--text-black-900);
-
-    padding: 5px 15px;
-    border-bottom: 1px solid var(--bg-black-50);
-}
-.aside .nav li a.active-link {
-    color: var(--skin-color);
-}
-.aside .nav li a i {
-    margin-right: 15px;
+                i {
+                    margin-right: 15px;
+                }
+            }
+        }
+    }
 }
