--- a/src/index.scss
+++ b/src/index.scss
@@ -32,7 +32,7 @@ ul {
     list-style: none;
 }
 .section {
-    display: block;
+    display: flex;
     min-height: 100vh;
     padding: 0 30px;
     background: var(--bg-black-900);
