--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -9,8 +9,8 @@
             max-width: 100%;
 
             & h3 {
-                font-size: 24px;
-                margin-bottom: 15px;
+                font-size: 1.5em; /* 24px / 16px = 1.5em */
+                margin-bottom: 0.937em; /* 15px / 16px = 0.9375em */
                 font-weight: 700;
                 color: var(--text-black-900);
 
@@ -21,7 +21,7 @@
 
             & p {
                 font-size: 1em;
-                line-height: 25px;
+                line-height: 1.5625em; /* 25px / 16px = 1.5625em */
                 color: var(--text-black-700);
             }
         }
@@ -29,7 +29,7 @@
         & .personal-info {
             flex: 0 0 60%;
             max-width: 60%;
-            margin-top: 40px;
+            margin-top: 2.5em; /* 40px / 16px = 2.5em */
 
             & .info-item {
                 flex: 0 0 50%;
@@ -40,22 +40,22 @@
                     font-size: 1em;
                     color: var(--text-black-900);
                     border-bottom: 1px solid var(--bg-black-50);
-                    padding: 10px 0;
+                    padding: 0.625em 0; /* 10px / 16px = 0.625em */
 
                     & span {
                         font-weight: 400;
                         color: var(--text-black-700);
                         display: inline-block;
-                        margin-left: 4px;
+                        margin-left: 0.25em; /* 4px / 16px = 0.25em */
                     }
                 }
             }
 
             & .buttons {
-                margin-top: 30px;
+                margin-top: 1.875em; /* 30px / 16px = 1.875em */
 
                 & .btn {
-                    margin: 10px 15px 0 0;
+                    margin: 0.625em 0.937em 0 0; /* 10px / 16px = 0.625em, 15px / 16px = 0.9375em */
                 }
             }
         }
@@ -63,17 +63,17 @@
         & .skills {
             flex: 0 0 40%;
             max-width: 40%;
-            margin-top: 25px;
+            margin-top: 1.5625em; /* 25px / 16px = 1.5625em */
 
             & .skill-item {
                 flex: 0 0 100%;
                 max-width: 100%;
-                margin-bottom: 30px;
+                margin-bottom: 1.875em; /* 30px / 16px = 1.875em */
 
                 & h5 {
                     font-size: 1em;
                     font-weight: 600;
-                    line-height: 40px;
+                    line-height: 2.5em; /* 40px / 16px = 2.5em */
                     color: var(--text-black-900);
                     text-transform: capitalize;
                 }
@@ -81,15 +81,15 @@
                 & .progress {
                     position: relative;
                     width: 100%;
-                    height: 7px;
+                    height: 0.4375em; /* 7px / 16px = 0.4375em */
                     background-color: var(--bg-black-50);
-                    border-radius: 4px;
+                    border-radius: 0.25em; /* 4px / 16px = 0.25em */
 
                     & .progress-in {
                         position: absolute;
                         left: 0;
                         top: 0;
-                        border-radius: 4px;
+                        border-radius: 0.25em;
                         height: 100%;
                         background-color: var(--skin-color);
                     }
@@ -97,9 +97,9 @@
                     & .skill-percent {
                         position: absolute;
                         right: 0;
-                        top: -40px;
+                        top: -2.5em; /* 40px / 16px = 2.5em */
                         font-weight: 400;
-                        line-height: 40px;
+                        line-height: 2.5em; /* 40px / 16px = 2.5em */
                         color: var(--text-black-900);
                     }
                 }
@@ -110,14 +110,14 @@
         & .experience {
             flex: 0 0 50%;
             max-width: 50%;
-            margin-top: 30px;
+            margin-top: 1.875em; /* 30px / 16px = 1.875em */
         }
 
         & h3.title {
-            font-size: 24px;
+            font-size: 1.5em; /* 24px / 16px = 1.5em */
             font-weight: 700;
             color: var(--text-black-900);
-            margin-bottom: 30px;
+            margin-bottom: 1.875em; /* 30px / 16px = 1.875em */
         }
 
         & .timeline-box {
@@ -128,14 +128,14 @@
         & .timeline {
             position: relative;
             width: 100%;
-            padding: 30px 15px;
+            padding: 1.875em 0.937em;
+            /*30px/16px=1.875em,15px/16px=0.9375em*/
             background-color: var(--bg-black-100);
-            border: 1px solid var(--bg-black-50);
-            border-radius: 15px;
-
+            border: 0.0625em solid var(--bg-black-50);
+            border-radius: 0.937em;
             & .timeline-item {
                 position: relative;
-                padding: 0 0 50px 37px;
+                padding: 0 0 3.125em 2.3125em; /* 50px / 16px = 3.125em, 37px / 16px = 2.3125em */
 
                 &:last-child {
                     padding-bottom: 0;
@@ -143,49 +143,146 @@
 
                 &::before {
                     content: "";
-                    width: 1px;
+                    width: 0.0625em; /* 1px / 16px = 0.0625em */
                     height: 100%;
+
                     background-color: var(--skin-color);
+
                     position: absolute;
                     top: 0;
-                    left: 7px;
+                    left: 0.4375em; /* 7px / 16px = 0.4375em */
                 }
 
                 & .circle-dot {
                     position: absolute;
                     top: 0;
                     left: 0;
-                    width: 15px;
-                    height: 15px;
+                    width: 0.937em; /* 15px / 16px = 0.9375em */
+                    height: 0.937em; /* 15px / 16px = 0.9375em */
                     border-radius: 50%;
                     background-color: var(--skin-color);
                 }
 
                 & .timeline-date {
-                    font-size: 14px;
+                    font-size: 0.875em; /* 14px / 16px = 0.875em */
                     font-weight: 400;
                     color: var(--text-black-700);
-                    margin-bottom: 12px;
+                    margin-bottom: 0.75em; /* 12px / 16px = 0.75em */
 
                     & .fa {
-                        margin-right: 5px;
+                        margin-right: 0.3125em; /* 5px / 16px = 0.3125em */
                     }
                 }
 
                 & .timeline-title {
-                    font-size: 18px;
+                    font-size: 1.125em; /* 18px / 16px = 1.125em */
                     font-weight: 700;
                     text-transform: capitalize;
                     color: var(--text-black-900);
-                    margin-bottom: 15px;
+                    margin-bottom: 0.937em; /* 15px / 16px = 0.9375em */
                 }
 
                 & .timeline-text {
                     font-size: 1em;
-                    line-height: 25px;
+                    line-height: 1.5625em; /* 25px / 16px = 1.5625em */
                     color: var(--text-black-700);
+                    transition: transform 1.3s ease-in-out;
+                    // .close {
+                    //     display: none;
+                    // }
+                    // .open {
+                    //     animation: openColse 0.45s ease-in-out;
+                    //     transform-origin: top;
+                    //     min-width: 100%;
+                    //     padding: 0;
+                    //     margin: 0;
+                    //     //transform: scale(1);
+                    //     -webkit-animation: openColse 0.45s ease-in-out;
+                    //     border: 1px solid #000;
+                    // }
+                }
+            }
+
+            div.div-anime {
+                transition: transform 0.3s ease-in-out;
+                .close {
+                    display: none;
+                    transform: scale(0);
+                }
+                .open {
+                    min-width: 100%;
+                    padding: 0;
+                    margin: 0;
+                    animation: openColse2 0.15s ease-in-out;
+                    display: block;
+                    // border: 1px solid #000;
+                    -webkit-animation: openColse2 0.15s ease-in-out;
+                }
+                p.timeline-anime {
+                    transition: transform 0.3s ease-in-out;
+                    height: 0;
+                    opacity: 0;
+                    color: transparent;
+                    .close {
+                        display: none;
+                    }
+                    &.open {
+                        // animation: openColse 0.3s ease-in-out;
+                        // color: red;
+                        height: auto;
+                        opacity: 1;
+                        color: var(--bg-black-700);
+                        font-weight: 600;
+                        text-align: justify;
+                    }
+                }
+                ul {
+                    li.ul-anime {
+                        // transition: transform 0.2s ease-in-out;
+
+                        .close {
+                            display: none;
+                        }
+                        &.open {
+                            -webkit-animation: openColse2 0.2s ease-in-out;
+                            animation: openColse2 0.2s ease-in-out;
+                        }
+                    }
                 }
             }
         }
+    }
+}
+@keyframes openColse {
+    0% {
+        transform-origin: top;
+        transform: scaleY(0);
+        opacity: 0;
+        // color: var(--bg-black-50);
+    }
+    33% {
+        transform: scaleY(0.5);
+    }
+    50% {
+        opacity: 0.33;
+        transform: scaleY(1);
+    }
+    100% {
+        opacity: 1;
+        // color: var(--text-black-700);
+    }
+}
+@keyframes openColse2 {
+    0% {
+        transform-origin: top;
+        transform: scaleY(0);
+
+        // color: var(--bg-black-50);
+    }
+    33% {
+        transform: scaleY(0.5);
+    }
+    100% {
+        transform: scaleY(1);
     }
 }
