--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -162,6 +162,7 @@
             & .timeline-item {
                 position: relative;
                 padding: 0 1.1562em 3.125em 2.3125em; /* 50px / 16px = 3.125em, 37px / 16px = 2.3125em */
+                
 
                 &:last-child {
                     padding-bottom: 0;
@@ -207,115 +208,165 @@
                     color: var(--text-black-900);
                     margin-bottom: 0.937em; /* 15px / 16px = 0.9375em */
                 }
-
+                // & .timeline-text_add {
+                // }
                 & .timeline-text {
                     font-size: 1em;
-                    line-height: 1.5625em; /* 25px / 16px = 1.5625em */
+                    line-height: 1.5625em;
+                    /*25px/16px=1.5625em*/
                     color: var(--text-black-700);
                     transition: transform 1.3s ease-in-out;
                     display: flex;
-                    flex-flow: row wrap;
+                    flex-flow: column wrap;
                     justify-content: space-between;
-                    // border: 1px solid #000;
+                    position: relative;
                     width: 100%;
-                    // .close {
-                    //     display: none;
-                    // }
-                    // .open {
-                    //     animation: openColse 0.45s ease-in-out;
-                    //     transform-origin: top;
-                    //     min-width: 100%;
-                    //     padding: 0;
-                    //     margin: 0;
-                    //     //transform: scale(1);
-                    //     -webkit-animation: openColse 0.45s ease-in-out;
-                    //     border: 1px solid #000;
-                    // }
+                    // border-bottom: 1px solid var(--skin-color);
+                    // padding: 0.625em 0 0 0; /* 10px / 16px = 0.625em */
+                    // border-radius: 0.5em;
+                    // border: 1px solid #000;
+                    &_add {
+                        // border-bottom: 1px solid var(--bg-black-50);
+                        // padding: 0.625em 0 1em 0; /* 10px / 16px = 0.625em */
+                        .bd_Bottom {
+                            position: relative;
+                            width: 100%;
+                            border-bottom: 1px solid var(--bg-black-50);
+                            // border-bottom: 1px solid var(--skin-color);
+
+                            top: 0;
+                            .fa-Circle {
+                                float: right;
+                                width: 1.5625em;
+                                height: 1.5625em;
+                                border-radius: 50%;
+                                display: flex;
+                                // text-align: center;
+                                justify-content: center;
+                                // border: 1px solid #000;
+                                background: var(--bg-black-50);
+                                position: relative;
+                                bottom: 0.75em;
+
+                                i {
+                                    position: absolute;
+                                    left: 0.125em;
+                                    font-size: 1em;
+                                    // line-height: 0.89em;
+                                    align-self: center;
+                                    width: 1em;
+                                    height: 1em;
+                                    // bottom: -0.85em;
+                                    // right: 0;
+                                    // border: 1px solid var(--skin-color);
+                                    // border-color: var(--bg-black-50);
+                                    // border-radius: 50%;
+                                    color: var(--skin-color);
+                                    color: var(--bg-black-100);
+                                    padding: 0em 0em 0em 0.05em; /* 10px / 16px = 0.625em */
+                                    // text-align: center;
+                                    // background-color: var(--skin-color);
+
+                                    margin-left: calc(100% - 1.4em);
+                                    cursor: pointer;
+                                }
+                            }
+                        }
+                    }
+
+                    .close {
+                        display: none;
+                    }
+                    .open {
+                        animation: openColse 0.45s ease-in-out;
+                        transform-origin: top;
+                        min-width: 100%;
+                        padding: 0;
+                        margin: 0;
+                        //transform: scale(1);
+                        -webkit-animation: openColse 0.45s ease-in-out;
+                        // border: 1px solid #000;
+                    }
                     h4 {
-                        display: block;
+                        // display: block;
                         flex: 1;
                         // border: 1px solid #000;
                         width: 100%;
                         min-width: 200px;
                     }
                     .technologies {
-                        // flex: 1;
                         display: flex;
                         align-items: center;
-                        // justify-content: center;
-                        // max-height: 20px;
-                        margin-left: 1em;
+                        margin-right: 2em;
                         width: auto;
-                        // float: right;
-                        // text-align: center;
-                        // border: 1px solid #000;
-                        // background: var(--skin-color);
-                        // padding: 0 0.19em;
-                        width: 100%;
+                        float: right;
+                        padding: 0.625em 0 0 0;
+                        font-size: 1em;
+                        font-weight: 400;
                         img {
                             display: block;
-                            //width: auto;
                             height: 1.2em;
-                            //max-height: 2em;
-                            //min-height: 2em;
                             object-fit: contain;
                             padding: 0 0.19em;
-                            -webkit-filter: drop-shadow(
-                                2px 3px rgba(0, 0, 0, 0.25)
-                            );
+                            // -webkit-filter: grayscale(100%);
+                            // filter: grayscale(100%);
                             filter: drop-shadow(2px 3px rgba(0, 0, 0, 0.25));
                             &:hover {
-                                -webkit-filter: grayscale(0%);
-                                filter: grayscale(0%);
                             }
                         }
                     }
-                }
-            }
+                    div.div-anime {
+                        transition: transform 0.3s ease-in-out;
 
-            div.div-anime {
-                transition: transform 0.3s ease-in-out;
-                .close {
-                    display: none;
-                    transform: scale(0);
-                }
-                .open {
-                    min-width: 100%;
-                    padding: 0;
-                    margin: 0;
-                    animation: openColse2 0.15s ease-in-out;
-                    display: block;
-                    // border: 1px solid #000;
-                    -webkit-animation: openColse2 0.15s ease-in-out;
-                }
-                p.timeline-anime {
-                    transition: transform 0.3s ease-in-out;
-                    height: 0;
-                    opacity: 0;
-                    color: transparent;
-                    .close {
-                        display: none;
-                    }
-                    &.open {
-                        // animation: openColse 0.3s ease-in-out;
-                        // color: red;
-                        height: auto;
-                        opacity: 1;
-                        color: var(--bg-black-700);
-                        font-weight: 600;
-                        text-align: justify;
-                    }
-                }
-                ul {
-                    li.ul-anime {
-                        // transition: transform 0.2s ease-in-out;
 
                         .close {
                             display: none;
+                            transform: scale(0);
                         }
-                        &.open {
-                            -webkit-animation: openColse2 0.2s ease-in-out;
-                            animation: openColse2 0.2s ease-in-out;
+                        .open {
+                            min-width: 100%;
+                            padding: 0;
+                            margin: 0;
+                            animation: openColse2 0.15s ease-in-out;
+                            display: block;
+                            // border: 1px solid #000;
+                            -webkit-animation: openColse2 0.15s ease-in-out;
+                        }
+                        p.timeline-anime {
+                            transition: transform 0.3s ease-in-out;
+                            height: 0;
+                            opacity: 0;
+                            color: transparent;
+                            // border: 1px solid #000;
+                            // padding: 1em 0;
+                            margin: 0.625em 0;
+                            // margin: 0.312em 0 0.625em 0;
+                            .close {
+                                display: none;
+                            }
+                            &.open {
+                                // animation: openColse 0.3s ease-in-out;
+                                // color: red;
+                                height: auto;
+                                opacity: 1;
+                                color: var(--bg-black-700);
+                                font-weight: 600;
+                                text-align: justify;
+                            }
+                        }
+                        ul {
+                            li.ul-anime {
+                                // transition: transform 0.2s ease-in-out;
+
+                                .close {
+                                    display: none;
+                                }
+                                &.open {
+                                    -webkit-animation: openColse2 0.2s
+                                        ease-in-out;
+                                    animation: openColse2 0.2s ease-in-out;
+                                }
+                            }
                         }
                     }
                 }
